One-time: unregister old service workers and clear caches on clients

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <title>Holicast</title>
   </head>
   <body class="bg-slate-950 text-white antialiased">
+    <script>
+      (function(){
+        try {
+          // Run once per client to clear old service workers and caches
+          if (localStorage.getItem('holicast_sw_cleared_v1')) return;
+          if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.getRegistrations()
+              .then(regs => Promise.all(regs.map(r => { try { return r.unregister(); } catch(e){ return false } })))
+              .then(() => caches.keys())
+              .then(keys => Promise.all(keys.map(k => caches.delete(k))))
+              .then(() => localStorage.setItem('holicast_sw_cleared_v1','1'))
+              .catch(()=>{ /* ignore errors */ });
+          }
+        } catch (e) {}
+      })();
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
